fixtures/python/fallback/should_fail/equivalent_membership_rewrite.py
def read_tool_use_id(tool_use: dict) -> str:
    return tool_use["toolUseId"] if "toolUseId" in tool_use else "tool"
